--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+*,
+*::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+  background-color: #333;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header>ul {
+  height: 2.5rem;
+  list-style-type: none;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header > ul > li:hover {
+background-color: #111;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header>ul>li>a {
+  color: whitesmoke;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+  margin: 0 16px;
+}
+
+.cardContainer{
+  display: flex;
+  max-width: 1200px;
+  flex-wrap: wrap;
+}
+
+.singleCard {
+  padding: 2rem;
+  margin: 2rem;
+  max-width: 300px;
+  max-height: 300px;
+  border: 1px solid rgb(70, 70, 70);
+  border-radius: 5px;
+}
+
+.singleCard > img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+
+}
+footer {
+  width: 100%;
+  padding: 2rem;
+  height: 200px;
+  object-fit: cover;
 }
